test/bad/functions/variadic01.px

func f(Int... a, Int... b) def
    return
